--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "drupal/coder",
+    "name": "elendev/drupal-coder",
     "type": "phpcodesniffer-standard",
     "description": "Coder is a library to review Drupal code.",
     "homepage": "https://www.drupal.org/project/coder",
@@ -21,6 +21,9 @@
         "slevomat/coding-standard": "^7.0",
         "squizlabs/php_codesniffer": "^3.6.0",
         "symfony/yaml": ">=2.0.5"
+    },
+    "replace": {
+        "drupal/coder": "*"
     },
     "autoload": {
         "psr-4": {
